Add motor manager node

--- a/gate_manager/CMakeLists.txt
+++ b/gate_manager/CMakeLists.txt
@@ -5,11 +5,24 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+  add_compile_options(-O3 -march=native -DNDEBUG)
+elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
+  add_compile_options(-g)
+endif()
+
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(gate_msgs REQUIRED)
+find_package(micros_common_type REQUIRED)
+
+include_directories(include ${micros_common_type_INCLUDE_DIRS})
+
+set(motor_manager_dependencies "rclcpp" "gate_msgs")
+add_executable(motor_manager_node src/motor_manager_node.cpp)
+ament_target_dependencies(motor_manager_node ${motor_manager_dependencies})
+install(TARGETS motor_manager_node DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
